@@ -1,0 +1,8 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+  i18n_domain="eea">
+
+  <adapter name="eea.geotags.field"
+    for="eea.geotags.interfaces.IGeoTaggable"
+    factory=".subtypes.GeotagsFieldExtender" />
+
+</configure>
