@@ -1,6 +1,10 @@
 <configure xmlns="http://namespaces.zope.org/zope"
            i18n_domain="eea">
 
+  <class class="Products.CMFPlone.Portal.PloneSite">
+    <implements interface="eea.geotags.interfaces.IGeoTaggable" />
+  </class>
+
   <class class="Products.Archetypes.BaseObject.BaseObject">
     <implements interface="eea.geotags.interfaces.IGeoTaggable" />
   </class>
